--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "homepage": "https://kmarjanski.github.io/ToDo/",
   "name": "project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "install": "^0.13.0",
     "node-sass": "^5.0.0",
     "npm": "^7.9.0",
@@ -15,6 +17,8 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
