--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kmarjanski.github.io/ToDo/",
+  "homepage": "https://kmarjanski.github.io/ToDo-App/",
   "name": "project",
   "version": "0.1.0",
   "private": true,
